@@ -26,8 +26,8 @@ public class NotificationServiceImpl implements NotificationService {
     public List<NotificationResponse> getAllNotificationsForUser(User user) {
         List<Notification> notifications = notificationMemberRepository.findByUser(user)
                 .stream()
-                .map(NotificationMember -> NotificationMember.getNotification())
-                .collect(Collectors.toList());
+                .map(NotificationMember::getNotification)
+                .toList();
         return notifications.stream()
                 .map(this::mapToResponse)
                 .collect(Collectors.toList());
@@ -40,11 +40,19 @@ public class NotificationServiceImpl implements NotificationService {
         return notifications.map(this::mapToResponse);
     }
 
+    @Override
+    public void markNotificationAsRead(String id) {
+        Notification notification = notificationRepository.findById(id)
+                .orElseThrow(() -> new RuntimeException("Notification not found"));
+        notification.setRead(true);
+        notificationRepository.save(notification);
+    }
+
     private NotificationResponse mapToResponse(Notification notification) {
         NotificationResponse response = new NotificationResponse();
         response.setId(notification.getId());
         response.setContent(notification.getContent());
-        response.setType(notification.getType());
+        response.setType(notification.getType().toString());
         response.setRead(notification.isRead());
         response.setCreatedAt(notification.getCreatedAt());
         return response;
